Added seconds stick

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="minutes"></div>
         <div class="hour"></div>
         <div class="circle"></div>
+        <div class="seconds"></div>
     </div>
 </body>
 </html>
